# rust-docker-grpc

./: .dockerignore  Cargo.toml  DockerFile  README.md  docker-compose.yml  gRPC Architecture.drawio
client/: Cargo.toml
client/src/: cli.yml  main.rs
client1/: build.rs
client1/src/: main.rs
proto/: helloworld.proto
server/: Cargo.toml
server/src/: main.rs  srv.yml
